lab-cilium-network-policy/allow-empire-in-namespace-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-empire-in-namespace
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
    - fromEndpoints:
        - matchLabels:
            org: empire
            class: tiefighter
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
            - method: "POST"
              path: "/v1/request-landing"
    - fromEndpoints:
        - matchLabels:
            org: empire
            class: maintenance-droid
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http: 
            - method: "PUT"
              path: "/v1/exhaust-port"
